--- a/compose.yaml
+++ b/compose.yaml
@@ -1,19 +1,30 @@
 services:
-  app-1:
+  app-1: &app-1
     build:
       context: .
     ports:
-      - 9999:9999
+      - 8081:8080
+    volumes:
+      - type: bind
+        source: ./src
+        target: /usr/loca/app/src/
     develop:
       watch:
         - path: ./src
           action: sync
-          target: /usr/local/app/src
-        - path: ./package.json
+          target: /usr/local/app/src/
+        - path: ./src/package.json
           action: rebuild
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - backend-network
+
+  app-2:
+    <<: *app-1
+    ports:
+      - 8082:8080
         
   db:
     image: postgres
@@ -33,9 +44,27 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - backend-network
+
+  nginx:
+    image: nginx:1.24.0
+    ports:
+      - "9999:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app-1
+      - app-2
+    networks:
+      - backend-network
+
 volumes:
   db-data:
 secrets:
   db-password:
     file: db/password.txt
 
+networks:
+  backend-network:
+    driver: bridge
