--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,9 @@ services:
       context: .
     ports:
       - 8081:8080
+    environment:
+      - PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
+      - PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
     volumes:
       - type: bind
         source: ./src
@@ -20,6 +23,7 @@ services:
         condition: service_healthy
     networks:
       - backend-network
+      - payment-processor
 
   app-2:
     <<: *app-1
@@ -66,5 +70,7 @@ secrets:
     file: db/password.txt
 
 networks:
+  payment-processor:
+    external: true
   backend-network:
     driver: bridge
