--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "devDependencies": {
     "@types/bun": "^1.2.19",
-    "@types/express": "^5.0.3"
+    "@types/pg": "^8.15.4"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "pg": "^8.16.3"
   }
 }
