add worker to process payments from Redis queue

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,10 @@
 events {}
 
 http {
+    access_log off;
+    
     upstream backend {
         server app-1:8080;
-        server app-2:8080;
     }
 
     server {
