--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  app-1: &app-1
+  app-1:
     build:
       context: .
     ports:
@@ -11,7 +11,8 @@ services:
       - DB_PORT=5432
       - DB_NAME=payment
       - DB_USER=user
-      - DB_PASSWORD=123456 
+      - DB_PASSWORD=123456
+      - REDIS_URL=redis://redis:6379
     volumes:
       - ./src:/usr/local/app/src
     command: bun run --watch /usr/local/app/src/main.ts
@@ -22,10 +23,13 @@ services:
       - backend-network
       - payment-processor
 
-  app-2:
-    <<: *app-1
+  redis:
+    image: redis:7.2
+    restart: unless-stopped
     ports:
-      - 8082:8080
+      - 6379:6379
+    networks:
+      - backend-network
         
   db:
     image: postgres
@@ -58,7 +62,19 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app-1
-      - app-2
+    networks:
+      - backend-network
+
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: unless-stopped
+    ports:
+      - "5050:80" 
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      - db
     networks:
       - backend-network
 
