--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  app-1:
+  app-1: &app-1
     build:
       context: .
     ports:
@@ -13,7 +13,7 @@ services:
       - DB_USER=user
       - DB_PASSWORD=123456
       - REDIS_URL=redis://redis:6379
-      - WORKERS=2
+      - WORKERS=3
     volumes:
       - ./src:/usr/local/app/src
     command: bun run --watch /usr/local/app/src/main.ts
@@ -23,6 +23,12 @@ services:
     networks:
       - backend-network
       - payment-processor
+
+  app-2: 
+    <<: *app-1
+    ports:
+      - 8082:8080
+
 
   redis:
     image: redis:7.2
@@ -63,6 +69,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app-1
+      - app-2
     networks:
       - backend-network
 
